load("@crates//:defs.bzl", "aliases", "all_crate_deps")

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_proc_macro", "rust_test")



filegroup(

    name = "cargo_manifest",

    srcs = ["Cargo.toml"],

    visibility = ["//visibility:public"],

)



filegroup(

    name = "package_runfiles",

    srcs = glob(["Cargo.toml", "**/*"], exclude = ["BUILD", "BUILD.bazel"], allow_empty = True),

    visibility = ["//visibility:public"],

)



rust_library(
    name = "meerkat_anthropic",
    aliases = aliases(package_name = "meerkat-anthropic"),
    crate_name = "meerkat_anthropic",
    crate_root = "src/lib.rs",
    crate_features = [
        "oauth",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-anthropic",
        proc_macro = True,
    ),
    deps = [
        "//meerkat-auth-core:meerkat_auth_core",
        "//meerkat-core:meerkat_core",
        "//meerkat-llm-core:meerkat_llm_core",
    ] + all_crate_deps(
        package_name = "meerkat-anthropic",
        normal = True,
    ),
)

rust_library(
    name = "meerkat_anthropic_agent_factory_build",
    aliases = aliases(package_name = "meerkat-anthropic"),
    crate_name = "meerkat_anthropic",
    crate_root = "src/lib.rs",
    crate_features = [
        "oauth",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = glob(["src/**/*.rs"]),
    visibility = [
        "//meerkat-anthropic:__pkg__",
        "//meerkat-auth-core:__pkg__",
        "//meerkat-cli:__pkg__",
        "//meerkat-client:__pkg__",
        "//meerkat-comms:__pkg__",
        "//meerkat-contracts:__pkg__",
        "//meerkat-core:__pkg__",
        "//meerkat-gemini:__pkg__",
        "//meerkat-hooks:__pkg__",
        "//meerkat-llm-core:__pkg__",
        "//meerkat-machine-codegen:__pkg__",
        "//meerkat-machine-derive:__pkg__",
        "//meerkat-machine-dsl-core:__pkg__",
        "//meerkat-machine-dsl:__pkg__",
        "//meerkat-machine-kernels:__pkg__",
        "//meerkat-machine-schema:__pkg__",
        "//meerkat-mcp-server:__pkg__",
        "//meerkat-mcp:__pkg__",
        "//meerkat-memory:__pkg__",
        "//meerkat-mob-mcp:__pkg__",
        "//meerkat-mob-pack:__pkg__",
        "//meerkat-mob:__pkg__",
        "//meerkat-models:__pkg__",
        "//meerkat-openai:__pkg__",
        "//meerkat-providers:__pkg__",
        "//meerkat-rest:__pkg__",
        "//meerkat-rpc:__pkg__",
        "//meerkat-runtime:__pkg__",
        "//meerkat-schedule:__pkg__",
        "//meerkat-session:__pkg__",
        "//meerkat-skills:__pkg__",
        "//meerkat-store:__pkg__",
        "//meerkat-tools:__pkg__",
        "//meerkat-web-runtime:__pkg__",
        "//meerkat:__pkg__",
        "//tests/integration:__pkg__",
    ],
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-anthropic",
        proc_macro = True,
    ),
    deps = [
        "//meerkat-auth-core:meerkat_auth_core_agent_factory_build",
        "//meerkat-core:meerkat_core_agent_factory_build",
        "//meerkat-llm-core:meerkat_llm_core_agent_factory_build",
    ] + all_crate_deps(
        package_name = "meerkat-anthropic",
        normal = True,
    ),
)

rust_test(
    name = "meerkat_anthropic_unit_test",
    aliases = aliases(
        package_name = "meerkat-anthropic",
        normal = True,
        normal_dev = True,
        proc_macro = True,
        proc_macro_dev = True,
    ),
    crate_name = "meerkat_anthropic",
    crate_root = "src/lib.rs",
    crate_features = [
        "oauth",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    rustc_env = {
        "CARGO_MANIFEST_DIR": "./meerkat-anthropic",
    },
    tags = [
        "fast",
        "unit",
    ],
    size = "small",
    data = [
        ":package_runfiles",
    ],
    env = {
        "RUST_MIN_STACK": "16777216",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-anthropic",
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        "//meerkat-auth-core:meerkat_auth_core",
        "//meerkat-core:meerkat_core",
        "//meerkat-llm-core:meerkat_llm_core",
    ] + all_crate_deps(
        package_name = "meerkat-anthropic",
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "oauth_resolve_test",
    aliases = aliases(
        package_name = "meerkat-anthropic",
        normal = True,
        normal_dev = True,
        proc_macro = True,
        proc_macro_dev = True,
    ),
    crate_name = "oauth_resolve",
    crate_root = "tests/oauth_resolve.rs",
    crate_features = [
        "oauth",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = [
        "tests/oauth_resolve.rs",
    ],
    visibility = ["//visibility:public"],
    rustc_env = {
        "CARGO_BIN_NAME": "oauth_resolve",
        "CARGO_MANIFEST_DIR": "./meerkat-anthropic",
    },
    tags = [
        "fast",
    ],
    size = "small",
    data = [],
    env = {
        "RUST_MIN_STACK": "16777216",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-anthropic",
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        "//meerkat-anthropic:meerkat_anthropic",
        "//meerkat-auth-core:meerkat_auth_core",
        "//meerkat-core:meerkat_core",
        "//meerkat-llm-core:meerkat_llm_core",
    ] + all_crate_deps(
        package_name = "meerkat-anthropic",
        normal = True,
        normal_dev = True,
    ),
)

test_suite(
    name = "fast_tests",
    tests = [
        ":meerkat_anthropic_unit_test",
        ":oauth_resolve_test",
    ],
)
